@@ -1,4 +1,9 @@
+<b>2008-11-18</b>
+
+* Filters applied automatically when selected.
+
 <b>2008-11-17</b>
+
 * "Swap airports" rewritten, now much faster and no more threading problems
 * Keyboard focus set automatically after new flight, logout
 
